@@ -285,6 +285,11 @@ short Mask315[64] =
   0x7F, 0xFF, 0x7F, 0x3F, 0x1F, 0x0F, 0x07, 0x03,
   0xFF, 0x7F, 0x3F, 0x1F, 0x0F, 0x07, 0x03, 0x01 };
 
+short rank6[2] = { 5, 2 };
+short rank7[2] = { 6, 1 };
+short rank8[2] = { 7, 0 };
+
+
 int main (int argc, char *argv[])
 {
   int compilebook = 0;
